base/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  selector:
    matchLabels:
      run: transmission
  template:
    spec:
      containers:
        - name: transmission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      run: sonarr
  template:
    spec:
      containers:
        - name: sonarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      run: radarr
  template:
    spec:
      containers:
        - name: radarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      run: jackett
  template:
    spec:
      containers:
        - name: jackett
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      run: bazarr
  template:
    spec:
      containers:
        - name: bazarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      run: jellyfin
  template:
    spec:
      containers:
        - name: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  selector:
    matchLabels:
      run: dashy
  template:
    spec:
      containers:
        - name: dashy
