base/volumes_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  selector:
    matchLabels:
      run: transmission
  template:
    spec:
      containers:
        - name: transmission
          image: linuxserver/transmission
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      run: radarr
  template:
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      run: sonarr
  template:
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      run: jackett
  template:
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      run: bazarr
  template:
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      run: jellyfin
  template:
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.9.9
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  selector:
    matchLabels:
      run: dashy
  template:
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
