base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: htpc
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    - websecure-local
  routes:
    - match: Host(`traefik.my-homelab.party`)
      kind: Rule
      middlewares:
        - name: homelab-auth
          namespace: htpc
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`jellyfin.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: jellyfin
          namespace: htpc
          port: 8096
    - kind: Rule
      match: Host(`jackett.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: jackett
          namespace: htpc
          port: 9117
    - kind: Rule
      match: Host(`sonarr.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: sonarr
          namespace: htpc
          port: 8989
    - kind: Rule
      match: Host(`radarr.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: radarr
          namespace: htpc
          port: 7878
    - kind: Rule
      match: Host(`bazarr.my-homelab.party`)
      middlewares:
        - name: homelab-auth
          namespace: htpc
      priority: 0
      services:
        - kind: Service
          name: bazarr
          namespace: htpc
          port: 6767
    - kind: Rule
      match: Host(`transmission.my-homelab.party`)
      middlewares:
        - name: homelab-auth
          namespace: htpc
      priority: 0
      services:
        - kind: Service
          name: transmission
          namespace: htpc
          port: 9091
    - kind: Rule
      match: Host(`dashy.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: dashy
          namespace: htpc
          port: 4000
